--- a/ICT-LAB WEB API/ICT-LAB WEB API/Views/Dashboard/Index.cshtml
+++ b/ICT-LAB WEB API/ICT-LAB WEB API/Views/Dashboard/Index.cshtml
@@ -16,7 +16,8 @@
 
         <table class="table up">
             <tr ng-repeat="sensor in sensors.Sensors">
-                <td ng-bind="sensor.Name"></td>
+                <td class="col-md-10"ng-bind="sensor.Name"></td>
+                <td ng-click="removeSensor(sensor)" class="col-md-2 glyphicon glyphicon-remove"></td>
             </tr>
         </table>
 
