finished remove sensor

--- a/ICT-LAB WEB API/ICT-LAB WEB API/Views/Dashboard/Index.cshtml
+++ b/ICT-LAB WEB API/ICT-LAB WEB API/Views/Dashboard/Index.cshtml
@@ -17,7 +17,7 @@
         <table class="table up">
             <tr ng-repeat="sensor in sensors.Sensors">
                 <td class="col-md-10"ng-bind="sensor.Name"></td>
-                <td ng-click="removeSensor(sensor)" class="col-md-2 glyphicon glyphicon-remove"></td>
+                <td ng-click="removeSensor(sensor)" ><a href="" class="col-md-2 glyphicon glyphicon-remove"></a></td>
             </tr>
         </table>
 
