--- a/ICT-LAB WEB API/ICT-LAB WEB API/Views/Home/Register.cshtml
+++ b/ICT-LAB WEB API/ICT-LAB WEB API/Views/Home/Register.cshtml
@@ -14,7 +14,11 @@
     <div class="form-horizontal">
         <h4>User</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div>
+            <span class="text-danger">@TempData["Error"]</span>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        </div>
+        
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
