got project working again

--- a/ICTLAB/Dashboard/Views/Dashboard/Index.cshtml
+++ b/ICTLAB/Dashboard/Views/Dashboard/Index.cshtml
@@ -7,7 +7,7 @@
 
 <script>
     //var mySensors = @Html.Raw(Json.Encode(Model))
-    var mySensors = @Model;
+    //var mySensors = @Model;
 </script>
 
 <h2>Sensors</h2>
