created working Oauth2 + login&registration

--- a/ICTLAB/ICTLAB/Views/Login/Register.cshtml
+++ b/ICTLAB/ICTLAB/Views/Login/Register.cshtml
@@ -17,7 +17,7 @@
         <input id="confirmPassword" type="password" class="form-control"
                ng-model="userRegistrationConfirmPassword"/>
 
-        <button class="form-control btn btn-success" ng-click="registerUser()">Register</button>
+        <button type="submit" class="form-control btn btn-success" ng-click="registerUser()">Register</button>
     </div>
 
     {{responseData}}
