--- a/ICTLAB/ICTLAB/Views/Login/Login.cshtml
+++ b/ICTLAB/ICTLAB/Views/Login/Login.cshtml
@@ -14,6 +14,6 @@
                ng-model="userLoginPassword" />
 
 
-        <button class="form-control btn btn-success" ng-click="login()">Login</button>
+        <button type="submit" class="form-control btn btn-success" ng-click="login()">Login</button>
     </div>
 </div>
