--- a/ICTLAB/ICTLAB/Views/Shared/_Layout.cshtml
+++ b/ICTLAB/ICTLAB/Views/Shared/_Layout.cshtml
@@ -23,16 +23,17 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Dashboard", "Index", "Dashboard", new { area = "" }, null)</li>
+                    
                 </ul>
+                @Html.Partial("_LoginPartial")
+                
             </div>
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
