made logout function working

--- a/ICTLAB/ICTLAB/Views/Dashboard/Index.cshtml
+++ b/ICTLAB/ICTLAB/Views/Dashboard/Index.cshtml
@@ -17,8 +17,8 @@
         </table>
     </div>
     <div class="col-md-2">
-        @Html.ActionLink("Add Sensor", "Add")
+        @Html.ActionLink("Add Sensor", "Add", null, new {@class = "btn btn-default" })
     </div>
-    {{}}
 </div>
+
 
