--- a/ICTLAB/ICTLAB/Views/Dashboard/Add.cshtml
+++ b/ICTLAB/ICTLAB/Views/Dashboard/Add.cshtml
@@ -4,16 +4,13 @@
 @Scripts.Render("~/bundles/angularJS", "~/bundles/scripts")
 
 <h2>Add</h2>
-<div ng-app="app" ng-controller="sensorController">
+<div ng-app="app" ng-controller="homeController">
     <div class="col-md-12">
         <div class="form-group">
-            <label for="type">Sensor type:</label>
-            <select id="type"class="form-control" ng-model="sensor.type" ng-options="item for item in sensorTypes"></select><br />
+            <label for="name">Name:</label>
+            <input id="name" class="form-control" type="text" ng-model="home.name" /><br />
             <br />
-            <label for="link">target api link:</label>
-            <input id="link" class="form-control" type="text" ng-model="sensor.targetApiLink" /><br />
-            <br />
-            <button class="btn btn-default" ng-click="addSensor()">Add Sensor</button>
+            <button class="btn btn-default" ng-click="addHome()">Add Home</button>
         </div>
     </div>
 </div>
