--- a/ICTLAB/ICTLAB/Views/Sensor/Add.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Add.cshtml
@@ -14,11 +14,16 @@
             <input id="name" class="form-control" type="text" ng-model="sensor.name" /><br />
 
             <label for="type">Sensor type:</label>
-            <select id="type" class="form-control" ng-model="sensor.type" ng-options="item for item in sensorTypes"></select><br />
-            <br />
+            @*<select id="type" class="form-control" ng-model="sensor.type" ng-options="item for item in sensorTypes"></select><br/>*@
+            <input id="type" class="form-control" type="text" ng-model="sensor.type"/><br/>
+            <br/>
+
+            <label for="unit">Unit:</label>
+            <input id="unit" class="form-control" type="text" ng-model="sensor.unit"><br/>
+            <br/>
 
             <label for="link">target api link:</label>
-            <input id="link" class="form-control" type="text" ng-model="sensor.targetApiLink" /><br />
+            <input id="link" class="form-control" type="url" ng-model="sensor.targetApiLink" /><br />
             <br />
             <button class="btn btn-default" ng-click="addSensor()">Add Sensor</button>
         </div>
