added sensor data of 3 months old to sensordetails screen. data is filtered on api side.. causes a lot of overhead because it should be in the uery but didn't get it to work.

--- a/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
@@ -2,6 +2,12 @@
 @{
     ViewBag.Title = "Details";
 }
+<script>
+    var sensorId = '@ViewBag.ID';
+</script>
 
 <h2>Details - @ViewBag.ID</h2>
 
+<div ng-app="app" ng-controller="sensorController" data-ng-init="getSensorById()">
+    
+</div>
