added 3monthchart to sensordetails screen

--- a/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
@@ -6,8 +6,9 @@
     var sensorId = '@ViewBag.ID';
 </script>
 
-<h2>Details - @ViewBag.ID</h2>
+
 
 <div ng-app="app" ng-controller="sensorController" data-ng-init="getSensorById()">
-    
+    <h2>Details - {{sensorDetailModel.Name}}</h2>
+    <three-month-chart sensor-detail-model="sensorDetailModel"></three-month-chart>
 </div>
