--- a/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using ICTLAB.Helpers
+
 @{
     ViewBag.Title = "Details";
 }
@@ -6,9 +7,14 @@
     var sensorId = '@ViewBag.ID';
 </script>
 
-
-
 <div ng-app="app" ng-controller="sensorController" data-ng-init="getSensorById()">
     <h2>Details - {{sensorDetailModel.Name}}</h2>
-    <three-month-chart sensor-detail-model="sensorDetailModel"></three-month-chart>
+    <div class="row">
+        <div class="col-md-10">
+            <three-month-chart sensor-detail-model="sensorDetailModel"></three-month-chart>
+        </div>
+        <div class="col-md-2">
+            @Html.ActionLink("Terug naar " + HomeHelper.home, "Index", "Sensor", new { id = HomeHelper.home}, new { @class = "btn btn-default"})
+        </div>
+    </div>
 </div>
