--- a/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
@@ -8,6 +8,7 @@
 </script>
 
 <div ng-app="app" ng-controller="sensorController" data-ng-init="getSensorById()">
+    <h2>@HomeHelper.home</h2>
     <h2>Details - {{sensorDetailModel.Name}}</h2>
     <div class="row">
         <div class="col-md-10">
