--- a/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
@@ -12,10 +12,36 @@
     <h2>Details - {{sensorDetailModel.Name}}</h2>
     <div class="row">
         <div class="col-md-10">
-            <three-month-chart sensor-detail-model="sensorDetailModel"></three-month-chart>
+            <table class="table up">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Type</th>
+                    <th>TargetApiLink</th>
+                    <th>Unit</th>
+                    <th>Room</th>
+                    <th>Floor</th>
+                </tr>
+                </thead>
+                <tr>
+                    <td ng-bind="sensorDetailModel.Name"></td>
+                    <td ng-bind="sensorDetailModel.Type"></td>
+                    <td ng-bind="sensorDetailModel.TargetApiLink"></td>
+                    <td ng-bind="sensorDetailModel.Unit"></td>
+                    <td ng-bind="sensorDetailModel.Room"></td>
+                    <td ng-bind="sensorDetailModel.Floor"></td>
+                </tr>
+            </table>
         </div>
         <div class="col-md-2">
-            @Html.ActionLink("Terug naar " + HomeHelper.home, "Index", "Sensor", new { id = HomeHelper.home}, new { @class = "btn btn-default"})
+            @Html.ActionLink("Terug naar " + HomeHelper.home, "Index", "Sensor", new {id = HomeHelper.home}, new {@class = "btn btn-default"})
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-10">
+            <three-month-chart sensor-detail-model="sensorDetailModel"></three-month-chart>
+        </div>
+    </div>
+    
 </div>
