--- a/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
@@ -39,8 +39,14 @@
     </div>
 
     <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-7">
             <three-month-chart sensor-detail-model="sensorDetailModel"></three-month-chart>
+        </div>
+        <div class="col-md-3">
+            <counter-directive sensor-detail-model="sensorDetailModel"></counter-directive>
+        </div>
+        <div class="col-md-2">
+            
         </div>
     </div>
     
