--- a/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
@@ -1,14 +1,17 @@
-﻿@using ICTLAB.Helpers
-
-@{
+﻿@{
     ViewBag.Title = "Details";
 }
 <script>
-    var sensorId = '@ViewBag.ID';
+    var sensorId = '@ViewBag.SensorId';
+    var home = '@ViewBag.ID';
 </script>
+@{
+    var home = ViewBag.ID;
+    var sensorId = ViewBag.SensorId;
+}
 
 <div ng-app="app" ng-controller="sensorController" data-ng-init="getSensorById()">
-    <h2>@HomeHelper.home</h2>
+    <h2>@ViewBag.ID</h2>
     <h2>Details - {{sensorDetailModel.Name}}</h2>
     <div class="row">
         <div class="col-md-10">
@@ -34,7 +37,7 @@
             </table>
         </div>
         <div class="col-md-2">
-            @Html.ActionLink("Terug naar " + HomeHelper.home, "Index", "Sensor", new {id = HomeHelper.home}, new {@class = "btn btn-default"})
+            @Html.ActionLink("Terug naar home" , "Index", "Sensor", new {id = ViewBag.ID}, new {@class = "btn btn-default"})
         </div>
     </div>
 
