added begin of correlationmatrix

--- a/ICTLAB/ICTLAB/Views/Sensor/Visualisations.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Visualisations.cshtml
@@ -12,8 +12,7 @@
         @* visualisation of all sensors *@
         @* correlationmatrix between all sensors  *@
         <div ng-app="app">
-            <sensor-correlation-chart home="@ViewBag.ID"></sensor-correlation-chart>
+            <sensor-correlation-chart home=@ViewBag.ID></sensor-correlation-chart>
         </div>
-        
     </div>
 </div>
