--- a/ICTLAB/ICTLAB/Views/Sensor/Manage.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Manage.cshtml
@@ -1,6 +1,4 @@
-﻿@using ICTLAB.Helpers
-
-@{
+﻿@{
     ViewBag.Title = "Manage";
 }
 <script>
@@ -32,7 +30,7 @@
         </table>
     </div>
     <div class="col-md-2">
-        @Html.ActionLink("Terug naar " + HomeHelper.home, "Index", "Sensor", new { id = HomeHelper.home }, new { @class = "btn btn-default" })
+        @Html.ActionLink("Terug naar home", "Index", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-default" })
     </div>
 </div>
 
