--- a/ICTLAB/ICTLAB/Views/Dashboard/Index.cshtml
+++ b/ICTLAB/ICTLAB/Views/Dashboard/Index.cshtml
@@ -10,9 +10,15 @@
 <div ng-app="app" ng-controller="homeController">
     <div class="col-md-10" ng-cloak>
         <table class="table up">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
             <tr ng-repeat="home in homes">
                 @*<td class="col-md-10" ng-bind="home.Name"><a href=""></a></td>*@
-                <td class="col-md-10"><a href="/Sensor?id={{home.Name}}" target="_self">{{home.Name}}  </a></td>
+                <td class="col-md-10"><a href="/Sensor?id={{home.Name}}" target="_self">{{home.Name}} </a></td>
                 <td ng-click="removeHome(home)"><a href="" class="col-md-2 glyphicon glyphicon-remove"></a></td>
             </tr>
         </table>
