--- a/ICTLAB/ICTLAB/Views/Dashboard/Index.cshtml
+++ b/ICTLAB/ICTLAB/Views/Dashboard/Index.cshtml
@@ -16,7 +16,7 @@
                     <th>Remove</th>
                 </tr>
             </thead>
-            <tr ng-repeat="home in homes">
+            <tr ng-repeat="home in homes track by $index">
                 @*<td class="col-md-10" ng-bind="home.Name"><a href=""></a></td>*@
                 <td class="col-md-10"><a href="/Sensor?id={{home.Name}}" target="_self">{{home.Name}} </a></td>
                 <td ng-click="removeHome(home)"><a href="" class="col-md-2 glyphicon glyphicon-remove"></a></td>
