--- a/ICTLAB/ICTLAB/Views/Home/Index.cshtml
+++ b/ICTLAB/ICTLAB/Views/Home/Index.cshtml
@@ -1,24 +1,23 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+﻿<div id="banner" class="jumbotron text-center">
+    <h1>CHIBB Dashboard</h1>
+    <p>manage all your homes and sensors at one place!</p>
 </div>
+
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        @*<button type="button" class="btn btn-primary btn-block">Button 1</button>*@
+        @Html.ActionLink("Dashboard", "Index", "Dashboard", null, new {@class = "btn btn-primary btn-block"})
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        @*<button type="button" class="btn btn-primary btn-block">Button 1</button>*@
+        @Html.ActionLink("Login", "Login", "Login", null, new {@class = "btn btn-success btn-block" })
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        @*<button type="button" class="btn btn-primary btn-block">Button 1</button>*@
+        @Html.ActionLink("Register", "Register", "Login", null, new {@class = "btn btn-warning btn-block" })
+    </div>
+    <div class="col-md-3">
+        @*<button type="button" class="btn btn-primary btn-block">Button 1</button>*@
+        @Html.ActionLink("Help", "Index", "Help", null, new { @class = "btn btn-info btn-block" })
     </div>
 </div>
