added unittest project, fixed bug zooming in chart, changed button colors

--- a/ICTLAB/ICTLAB/Views/Dashboard/Add.cshtml
+++ b/ICTLAB/ICTLAB/Views/Dashboard/Add.cshtml
@@ -10,7 +10,7 @@
             <label for="name">Name:</label>
             <input id="name" class="form-control" type="text" ng-model="home.name" /><br />
             <br />
-            <button class="btn btn-default" ng-click="addHome()">Add Home</button>
+            <button class="btn btn-primary" ng-click="addHome()">Add Home</button>
         </div>
     </div>
 </div>
