--- a/ICTLAB/ICTLAB/Views/Dashboard/Index.cshtml
+++ b/ICTLAB/ICTLAB/Views/Dashboard/Index.cshtml
@@ -22,7 +22,7 @@
         </table>
     </div>
     <div class="col-md-2">
-        @Html.ActionLink("Add Home", "Add", null, new {@class = "btn btn-default"})
+        @Html.ActionLink("Add Home", "Add", null, new {@class = "btn btn-primary" })
     </div>
     <div class="row">
         <div class="col-md-10">
