--- a/ICTLAB/ICTLAB/Views/Sensor/Index.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Index.cshtml
@@ -30,9 +30,9 @@
         </table>
     </div>
     <div class="col-md-2">
-        @Html.ActionLink("Add Sensor", "Add", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-default" })
+        @Html.ActionLink("Add Sensor", "Add", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-primary" })
         <br />
         <br />
-        @Html.ActionLink("Manage sensors", "Manage", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-default" })
+        @Html.ActionLink("Manage sensors", "Manage", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-primary" })
     </div>
 </div>
