--- a/ICTLAB/ICTLAB/Content/Site.css
+++ b/ICTLAB/ICTLAB/Content/Site.css
@@ -21,3 +21,30 @@ textarea {
 .active, .inactive {font-size:40px;cursor:pointer;}
 i.active { color: #5cb85c}
 i.inactive {color: #d9534f}
+
+/* Tooltip container */
+.tooltipwrapper {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+.tooltipwrapper .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+ 
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltipwrapper:hover .tooltiptext {
+    visibility: visible;
+}
