--- a/ICTLAB/ICTLAB/Views/Sensor/Add.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Add.cshtml
@@ -33,11 +33,11 @@
             <label for="link">target api link:</label>
             <input id="link" class="form-control" type="url" ng-model="sensor.targetApiLink"/><br/>
             <br/>
-            <button class="btn btn-default" ng-click="addSensor()">Add Sensor</button>
+            <button class="btn btn-primary" ng-click="addSensor()">Add Sensor</button>
         </div>
     </div>
     <div class="col-md-2">
-        @Html.ActionLink("Terug naar home", "Index", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-default" })
+        @Html.ActionLink("Terug naar home", "Index", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-primary" })
     </div>
 </div>
 
