--- a/ICTLAB/ICTLAB/Views/Sensor/Manage.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Manage.cshtml
@@ -30,7 +30,7 @@
         </table>
     </div>
     <div class="col-md-2">
-        @Html.ActionLink("Terug naar home", "Index", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-default" })
+        @Html.ActionLink("Terug naar home", "Index", "Sensor", new { id = ViewBag.ID }, new { @class = "btn btn-primary" })
     </div>
 </div>
 
