added values api for the targetapilink. activated documentation and Added information about the url's

--- a/ICTLAB/ICTLAB/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/ICTLAB/ICTLAB/Areas/HelpPage/Views/Help/Index.cshtml
@@ -23,9 +23,10 @@
 <div id="body" class="help-page">
     <section class="featured">
         <div class="content-wrapper">
-            <h2>Introduction</h2>
+            <h2>Introductie</h2>
             <p>
-                Provide a general description of your APIs here.
+                Deze API is gemaakt met als doel om de data vanuit het CHIBB huis te registreren en de analyseren. <br/>
+                Kijk gerust rond!
             </p>
         </div>
     </section>
