--- a/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
+++ b/ICTLAB/ICTLAB/Views/Sensor/Details.cshtml
@@ -64,7 +64,7 @@
     <div class="row">
         <div class="col-md-10">
             <h2>Correlations with other sensors</h2>
-            <sensor-correlation-chart sensor-detail-model="sensorDetailModel" home=@ViewBag.ID></sensor-correlation-chart>
+            <sensor-correlation-chart sensor-detail-model="sensorDetailModel"></sensor-correlation-chart>
         </div>
     </div>
 </div>
